# admin-panel-backend-python

./: .gitignore  .isort.cfg  LICENSE  README.md  pyproject.toml
admin_panel/: __init__.py  app_generator.py  auth.py  exceptions.py  schema.py  table_schema.py  translations.py  utils.py
admin_panel/api/: api_exception.py  routers.py  utils.py
admin_panel/api/views/: auth.py  autocomplete.py  graphs.py  index.py  schema.py  settings.py  table.py
admin_panel/controllers/: __init__.py  auth.py
admin_panel/integrations/django/: __init__.py  auth.py  autocomplete.py  fields.py  table.py
admin_panel/integrations/sqlalchemy/: __init__.py  auth.py  autocomplete.py  fields.py  fields_schema.py  table.py
admin_panel/integrations/sqlalchemy/table/: base.py  create.py  delete.py  list.py  retrieve.py  update.py
admin_panel/schema/: __init__.py  admin_schema.py  base.py  category.py  group.py
admin_panel/schema/django/: __init__.py  autocomplete.py  fields.py  table.py
admin_panel/schema/graphs/: category_graphs.py
admin_panel/schema/sqlalchemy/: autocomplete.py  table.py
admin_panel/schema/table/: __init__.py  admin_action.py  category_table.py  django.py  fields_schema.py  table_models.py
admin_panel/schema/table/fields/: __init__.py  base.py  deserialize_action_types.py  django.py  function_field.py
admin_panel/static/: index-3uV-bV3u.js  index-B5nIBd6k.css  index-B8MMMi__.js  index-BAsfLQN1.js  index-BBpVl1Ai.css  index-BUVXqI2W.css  index-BVBNwPjd.css  index-Bb4G4z-W.js  index-Bg8pA08d.css  index-BrXRRuaE.css  index-BvilggL_.css  index-BzjxZcsb.css  index-C2ScDroa.js  index-C8nzyczU.js  index-C9FZ-qsh.js  index-CBUAI5t5.css  index-CLaJrmln.css  index-CW98abrZ.js  index-CpdRYq9U.css  index-Cqm24iJs.js  index-CsX7mwzP.js  index-CtEA1-bH.js  index-Cy52-Dm0.js  index-CyctfLBC.css  index-D5cWzQud.js  index-DZZtBW2n.js  index-GSpelzG1.css  index-JX8pHveG.js  index-JcBglAFS.css  index-SCeDXvci.js  index-coJ5huxy.js  index-m0576NSW.js  index-nyF6cTH7.js
admin_panel/templates/: index.html
example/: graphs.py  main.py  payments.py  phrases.py  sqlite.py  utils.py
example/sections/: currency.py  merchant.py  models.py  payments.py  terminal.py  users.py
tests/: conftest.py  test_action.py  test_payments_fields_schema.py  test_sqlalcmeny_auth.py  test_sqlalcmeny_crud.py  test_sqlalcmeny_filters.py  test_sqlalcmeny_schema.py  test_translations.py
