[project]
name = "admin-panel"
version = "0.16.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref>=3.11.0",
    "fastapi>=0.115.8",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['admin_panel']
include-package-data = true

[tool.setuptools.package-data]
admin_panel = ["static/**/*", "templates/**/*"]

[project.optional-dependencies]
example = [
    "uvicorn>=0.34.0",
    "faker>=38.2.0",
]
tests = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.1",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.41",
]
scalar = [
    "scalar-fastapi>=1.5.0",
]
